@@ -22,6 +22,7 @@ requires 'Error::Pure::HTTP' => 0.15;
 requires 'Error::Pure::HTTP::JSON' => 0.05;
 requires 'Error::Pure::JSON' => 0.08;
 requires 'Error::Pure::NoDie' => 0.05;
+requires 'Error::Pure::Output::ANSIColor' => 0.04;
 requires 'Error::Pure::Output::JSON' => 0.10;
 requires 'Error::Pure::Output::Tags::HTMLCustomPage' => 0.03;
 requires 'Error::Pure::Output::Text' => 0.24;
